--- a/resultStyle.css
+++ b/resultStyle.css
@@ -1,22 +1,39 @@
+* {
+	font-family: "Jua", sans-serif;
+}
+
 #sub {
-    font-size:25px;
-    text-align: center;
-    font-weight: normal;
-    margin-top:60px;
+	font-size: 35px;
+	text-align: center;
+	font-weight: normal;
+	margin-top: 60px;
 }
 
 #mbti {
-    font-size:35px;
-    color:rgba(252, 237, 33, 0.877);
-    text-align:center;
-    margin-top:0;   
-} 
+	font-size: 40px;
+	color: rgba(252, 237, 33, 0.877);
+	text-align: center;
+	margin-top: 0;
+}
 
 a {
-    color:rgba(252, 237, 33, 0.877);
+	color: rgba(252, 237, 33, 0.877);
+}
 
+p {
+	font-size: 20px;
+}
+
+label {
+	font-size: 20px;
 }
 
 #next {
-    text-align:right;
+	text-align: right;
+}
+
+.NextButton {
+	font-size: 18px;
+	padding: 5px 10px 5px 10px;
+	margin-right: 50px;
 }
