--- a/statistics_style.css
+++ b/statistics_style.css
@@ -1,52 +1,55 @@
-*{
-    background-color: rgb(233, 233, 233);
+* {
+	background-color: rgb(233, 233, 233);
+	font-family: "Jua", sans-serif;
 }
 
-p{
-    font-size: 50px;
-    text-align: left;
-    padding-left: 100px;
+p {
+	font-size: 50px;
+	text-align: left;
+	padding-top: 80px;
+	padding-left: 150px;
 }
 
 span {
-    color:rgb(255, 203, 31);
-    font-weight: bold;
+	color: rgb(255, 203, 31);
+	font-weight: bold;
 }
 
-table{
-    font-size:25px;
-    text-align: center;
-    margin-left:auto;
-    margin-right:auto;
-    width: 700px;
-    border-top: 1px solid #444444;
-    border-collapse: collapse;
+table {
+	font-size: 40px;
+	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
+	width: 700px;
+	border-top: 1px solid #444444;
+	border-collapse: collapse;
 }
 
-th, td {
-    border-bottom: 1px solid #444444;
-    padding: 10px;
+th,
+td {
+	border-bottom: 1px solid #444444;
+	padding: 20px;
 }
 
 th {
-    background-color: white;
+	background-color: white;
 }
 
 td {
-    background-color: rgb(233, 233, 233);
+	background-color: rgb(233, 233, 233);
 }
 
-#button{
-    text-align: center;
+#button {
+	text-align: center;
 }
 
 .button {
-    background-color: rgb(61, 61, 61);
-    color: white;
-    padding: 20px 200px;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 30px;
-    margin: 4px 2px;
-    border-radius: 12px;
+	background-color: rgb(61, 61, 61);
+	color: white;
+	padding: 30px 200px;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 35px;
+	margin: 4px 2px;
+	border-radius: 12px;
 }
