--- a/Seolmoon.css
+++ b/Seolmoon.css
@@ -1,18 +1,19 @@
-body{
+body {
     display: flex;
     justify-content: center;
-    background-color: rgb(235, 235, 235);
+    /*background-color: rgb(235, 235, 235);*/
     margin: 0;
     padding: 0;
+    width:100%;
     height: 100vh;
 }
 
 .main_box {
     display: flex;
     flex-direction: column;
-    width: 630px;
+    width: 80%;
     background-color: white;
-    padding: 0px 45px;
+    /*padding: 0px 45px;*/
 }
 
 .top_box {
@@ -22,6 +23,7 @@ body{
 }
 
 .question_box {
+    text-align:center;
     margin-bottom: 30px;
     font-size: 25px;
 }
@@ -33,35 +35,45 @@ body{
 }
 
 .answer {
-    width: 630px;
+    width: 85%;
+    height:80%;
     padding: 16px 0px;
     margin-bottom: 9px;
     font-size: 18px;
+    white-space:normal;
+     -webkit-appearance: none;
+      -webkit-border-radius: 0;
 }
 
 .button_box {
     display: flex;
     justify-content: space-between;
     width: 100%;
+ -webkit-appearance: none;
 }
 
 .button_box1 {
     display: flex;
     justify-content: flex-end;
     width: 100%;
+     -webkit-appearance: none;
 }
 
 .next_button{
     margin-top: 115px;
-    padding: 15px 30px;
+    padding: 10px 20px;
+    font-size: 18px;
+    -webkit-appearance: none;
 }
 
 .prev_button{
     margin-top: 115px;
-    padding: 15px 30px;
+    padding: 10px 20px;
+    font-size:18px;
+     -webkit-appearance: none;
 }
 
 .clicked {
-    background-color: darkgray;
-    color: white;
+background-color:darkgray;
+color:black;
 }
