--- a/statistics_style.css
+++ b/statistics_style.css
@@ -1,11 +1,13 @@
 *{
     background-color: rgb(233, 233, 233);
+    font-family: "Jua", sans-serif;
 }
 
 p{
-    font-size: 50px;
+    font-size:80px;
     text-align: left;
-    padding-left: 100px;
+    padding-left: 150px;
+    padding-top:80px;
 }
 
 span {
@@ -14,7 +16,7 @@ span {
 }
 
 table{
-    font-size:25px;
+    font-size:50px;
     text-align: center;
     margin-left:auto;
     margin-right:auto;
@@ -25,7 +27,7 @@ table{
 
 th, td {
     border-bottom: 1px solid #444444;
-    padding: 10px;
+    padding: 15px;
 }
 
 th {
@@ -43,10 +45,10 @@ td {
 .button {
     background-color: rgb(61, 61, 61);
     color: white;
-    padding: 20px 200px;
+    padding: 30px 200px;
     text-decoration: none;
     display: inline-block;
-    font-size: 30px;
+    font-size: 50px;
     margin: 4px 2px;
     border-radius: 12px;
 }
